--- a/index.html
+++ b/index.html
@@ -9,20 +9,11 @@
 <body>
     <header>
         <h1>Discover the Best AI & Data Solutions</h1>
-        <p>Welcome to NicheCraft Automation, your trusted source for AI-powered tools and data-driven solutions!</p>
+        <p>Welcome to NicheCraft Automation, your trusted source for AI-powered tools and data-driven solutions! Explore expert recommendations and reviews to enhance productivity.</p>
         <div class="cta-buttons">
-            <a href="products.html" class="button">Browse Products</a>
-            <a href="about.html" class="button">Learn More</a>
+            <a href="products.html" class="button primary">Browse Products</a>
+            <a href="about.html" class="button secondary">Learn More</a>
         </div>
     </header>
 </body>
 </html>
-<footer>
-    <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
-        <a href="blog.html">Blog</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-</footer>
