--- a/product-template.html
+++ b/product-template.html
@@ -9,22 +9,14 @@
 <body>
     <main>
         <h1>Product Name</h1>
-        <p>Product Description goes here.</p>
+        <img src="product-image.jpg" alt="Product Image">
+        <p>Product Description goes here. Discover how this product can boost your productivity and streamline your operations using AI and data-driven solutions.</p>
         <ul>
-            <li>Key Benefit 1</li>
-            <li>Key Benefit 2</li>
-            <li>Key Benefit 3</li>
+            <li>Key Benefit 1: Enhance efficiency with AI automation.</li>
+            <li>Key Benefit 2: Data-driven insights for better decision-making.</li>
+            <li>Key Benefit 3: Easy to implement and scale.</li>
         </ul>
-        <a href="your-affiliate-link" class="button">Buy Now</a>
+        <a href="your-affiliate-link" class="button primary">Buy Now</a>
     </main>
 </body>
 </html>
-<footer>
-    <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
-        <a href="blog.html">Blog</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-</footer>
