--- a/blog.html
+++ b/blog.html
@@ -10,19 +10,11 @@
     <main>
         <h1>Blog Title</h1>
         <img src="featured-image.jpg" alt="Featured Image">
-        <p>Your blog content about AI tools and data solutions goes here.</p>
+        <p>Your blog content about AI tools and data solutions goes here. Explore in-depth reviews, tutorials, and guides to help you make informed tech decisions.</p>
+        <a href="related-product.html" class="button primary">Explore Related Product</a>
         <div class="share-buttons">
-            <a href="share-link" class="button">Share</a>
+            <a href="share-link" class="button secondary">Share</a>
         </div>
     </main>
 </body>
 </html>
-<footer>
-    <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
-        <a href="blog.html">Blog</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-</footer>
