--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 <body>
     <main>
         <h1>Contact Us</h1>
+        <p>Have questions? Get in touch with us and we’ll help you find the best AI tools and data solutions for your needs.</p>
         <form action="submit_form" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
@@ -16,7 +17,7 @@
             <input type="email" id="email" name="email" required>
             <label for="message">Message:</label>
             <textarea id="message" name="message" required></textarea>
-            <button type="submit">Send</button>
+            <button type="submit" class="button primary">Send</button>
         </form>
         <div class="social-media">
             <a href="your-social-link" class="social-icon">Follow on Twitter</a>
@@ -25,12 +26,3 @@
     </main>
 </body>
 </html>
-<footer>
-    <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
-        <a href="blog.html">Blog</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-</footer>
