--- a/product-template.html
+++ b/product-template.html
@@ -20,3 +20,17 @@
     </main>
 </body>
 </html>
+<footer>
+    <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="blog.html">Blog</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+    <p>Find us on:</p>
+    <div class="social-icons">
+        <a href="your-social-link">Twitter</a>
+        <a href="your-social-link">LinkedIn</a>
+    </div>
+</footer>
