--- a/product-template.html
+++ b/product-template.html
@@ -8,29 +8,25 @@
 </head>
 <body>
     <main>
-        <h1>Product Name</h1>
-        <img src="product-image.jpg" alt="Product Image">
-        <p>Product Description goes here. Discover how this product can boost your productivity and streamline your operations using AI and data-driven solutions.</p>
+        <h1>AI Task Automation Suite</h1>
+        <img src="path-to-your-product-image.jpg" alt="AI Task Automation Suite">
+        <p>This powerful automation tool helps businesses save time by automating repetitive tasks. It's ideal for both small and large businesses looking to scale efficiently.</p>
         <ul>
-            <li>Key Benefit 1: Enhance efficiency with AI automation.</li>
-            <li>Key Benefit 2: Data-driven insights for better decision-making.</li>
-            <li>Key Benefit 3: Easy to implement and scale.</li>
+            <li>Benefit 1: Easy setup and integration with existing systems</li>
+            <li>Benefit 2: Automates tasks, saving hours of manual labor</li>
+            <li>Benefit 3: Customizable to fit business-specific needs</li>
         </ul>
         <a href="your-affiliate-link" class="button primary">Buy Now</a>
     </main>
+
+    <footer>
+        <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="blog.html">Blog</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </footer>
 </body>
 </html>
-<footer>
-    <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
-        <a href="blog.html">Blog</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-    <p>Find us on:</p>
-    <div class="social-icons">
-        <a href="your-social-link">Twitter</a>
-        <a href="your-social-link">LinkedIn</a>
-    </div>
-</footer>
