--- a/blog.html
+++ b/blog.html
@@ -8,27 +8,26 @@
 </head>
 <body>
     <main>
-        <h1>Blog Title</h1>
-        <img src="featured-image.jpg" alt="Featured Image">
-        <p>Your blog content about AI tools and data solutions goes here. Explore in-depth reviews, tutorials, and guides to help you make informed tech decisions.</p>
-        <a href="related-product.html" class="button primary">Explore Related Product</a>
+        <h1>5 Best AI Tools to Improve Productivity</h1>
+        <img src="path-to-your-image.jpg" alt="Featured AI Tools">
+        <p>In today’s fast-paced business world, automation is key to staying competitive. Here are five AI tools that can drastically improve your workflow efficiency.</p>
+        <p>1. <strong>Tool A:</strong> Description and how it can be used.</p>
+        <p>2. <strong>Tool B:</strong> Description and why it’s a great option for businesses.</p>
+        <!-- Continue with more products or insights -->
+        <a href="related-product.html" class="button primary">Explore AI Task Automation Suite</a>
         <div class="share-buttons">
             <a href="share-link" class="button secondary">Share</a>
         </div>
     </main>
+
+    <footer>
+        <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="blog.html">Blog</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </footer>
 </body>
 </html>
-<footer>
-    <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
-        <a href="blog.html">Blog</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-    <p>Find us on:</p>
-    <div class="social-icons">
-        <a href="your-social-link">Twitter</a>
-        <a href="your-social-link">LinkedIn</a>
-    </div>
-</footer>
