--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <main>
         <h1>Contact Us</h1>
         <p>Have questions? Get in touch with us and we’ll help you find the best AI tools and data solutions for your needs.</p>
-        <form action="submit_form" method="POST">
+        <form action="https://formspree.io/f/{your-id}" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="email">Email:</label>
@@ -24,19 +24,15 @@
             <a href="your-social-link" class="social-icon">Follow on LinkedIn</a>
         </div>
     </main>
+
+    <footer>
+        <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="products.html">Products</a>
+            <a href="blog.html">Blog</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </footer>
 </body>
 </html>
-<footer>
-    <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
-        <a href="blog.html">Blog</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-    <p>Find us on:</p>
-    <div class="social-icons">
-        <a href="your-social-link">Twitter</a>
-        <a href="your-social-link">LinkedIn</a>
-    </div>
-</footer>
