--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </nav>
         <p>Find us on:</p>
         <div class="social-icons">
-            <a href="your-social-link">Twitter</a>
-            <a href="your-social-link">LinkedIn</a>
+            <a href="https://twitter.com">Twitter</a>
+            <a href="https://linkedin.com">LinkedIn</a>
         </div>
     </footer>
 </body>
-</html>
+</html
