--- a/blog.html
+++ b/blog.html
@@ -9,14 +9,14 @@
 <body>
     <main>
         <h1>5 Best AI Tools to Improve Productivity</h1>
-        <img src="path-to-your-image.jpg" alt="Featured AI Tools">
-        <p>In today’s fast-paced business world, automation is key to staying competitive. Here are five AI tools that can drastically improve your workflow efficiency.</p>
-        <p>1. <strong>Tool A:</strong> Description and how it can be used.</p>
-        <p>2. <strong>Tool B:</strong> Description and why it’s a great option for businesses.</p>
-        <!-- Continue with more products or insights -->
-        <a href="related-product.html" class="button primary">Explore AI Task Automation Suite</a>
+        <img src="images/ai-tools.jpg" alt="Featured AI Tools">
+        <p>In today’s fast-paced business world, automation is key to staying competitive. Here are five AI tools that can drastically improve your workflow efficiency:</p>
+        <p><strong>1. AI Task Automation Suite:</strong> Automates repetitive tasks, allowing businesses to focus on growth.</p>
+        <p><strong>2. AI-Powered Analytics Tool:</strong> Provides real-time insights with advanced analytics and predictive capabilities.</p>
+        <p><strong>3. AI Chatbots for Customer Support:</strong> 24/7 automated customer support with natural language processing.</p>
+        <a href="products.html" class="button primary">Explore AI Tools</a>
         <div class="share-buttons">
-            <a href="share-link" class="button secondary">Share</a>
+            <a href="https://twitter.com/share" class="button secondary">Share</a>
         </div>
     </main>
 
