--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <h1>Contact Us</h1>
-        <p>Have questions? Get in touch with us and we’ll help you find the best AI tools and data solutions for your needs.</p>
+        <p>If you have any questions about our AI tools or would like to learn more, feel free to get in touch!</p>
         <form action="https://formspree.io/f/{your-id}" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
@@ -20,8 +20,8 @@
             <button type="submit" class="button primary">Send</button>
         </form>
         <div class="social-media">
-            <a href="your-social-link" class="social-icon">Follow on Twitter</a>
-            <a href="your-social-link" class="social-icon">Follow on LinkedIn</a>
+            <a href="https://twitter.com" class="social-icon">Follow on Twitter</a>
+            <a href="https://linkedin.com" class="social-icon">Follow on LinkedIn</a>
         </div>
     </main>
 
