--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="images/OIP.jpg" alt="AI Technology Banner" style="width:100%;">
         <h1>Discover the Best AI & Data Solutions</h1>
         <p>Welcome to NicheCraft Automation, your trusted source for AI-powered tools and data-driven solutions! Explore expert recommendations and reviews to enhance productivity.</p>
         <div class="cta-buttons">
