--- a/products.html
+++ b/products.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <h1>AI Task Automation Suite</h1>
-        <img src="images/ai-task-suite.jpg" alt="AI Task Automation Suite">
+        <img src="images/OIP (1).jpg" alt="AI Task Automation Suite">
         <p>The AI Task Automation Suite is a powerful automation tool that helps businesses save time by automating repetitive tasks. It's ideal for both small and large businesses looking to scale efficiently.</p>
         <ul>
             <li>Easy setup and integration with existing systems</li>
