--- a/products.html
+++ b/products.html
@@ -8,25 +8,37 @@
 </head>
 <body>
     <main>
-        <h1>AI Task Automation Suite</h1>
-        <img src="images/OIP (1).jpg" alt="AI Task Automation Suite">
-        <p>The AI Task Automation Suite is a powerful automation tool that helps businesses save time by automating repetitive tasks. It's ideal for both small and large businesses looking to scale efficiently.</p>
-        <ul>
-            <li>Easy setup and integration with existing systems</li>
-            <li>Automates tasks, saving hours of manual labor</li>
-            <li>Customizable to fit business-specific needs</li>
-        </ul>
-        <a href="https://affiliate-link.com/product1" class="button primary">Buy Now</a>
-
-        <h1>AI-Powered Analytics Tool</h1>
-        <img src="images/ai-analytics-tool.jpg" alt="AI Analytics Tool">
-        <p>The AI-Powered Analytics Tool helps companies gain data-driven insights to make better business decisions. This tool offers real-time analytics and powerful data visualization.</p>
-        <ul>
-            <li>Real-time data analytics for faster decision-making</li>
-            <li>Advanced data visualization tools</li>
-            <li>AI-powered insights for predictive analytics</li>
-        </ul>
-        <a href="https://affiliate-link.com/product2" class="button primary">Buy Now</a>
+        <h1>Our Top AI Products</h1>
+        
+        <!-- Product 1 -->
+        <div class="product">
+            <img src="images/ai-task-suite.jpg" alt="AI Task Automation Suite" class="product-image">
+            <div class="product-info">
+                <h2>AI Task Automation Suite</h2>
+                <p>The AI Task Automation Suite is a powerful automation tool that helps businesses save time by automating repetitive tasks. It's ideal for both small and large businesses looking to scale efficiently.</p>
+                <ul>
+                    <li>Easy setup and integration with existing systems</li>
+                    <li>Automates tasks, saving hours of manual labor</li>
+                    <li>Customizable to fit business-specific needs</li>
+                </ul>
+                <a href="https://affiliate-link.com/product1" class="button primary">Buy Now</a>
+            </div>
+        </div>
+        
+        <!-- Product 2 -->
+        <div class="product">
+            <img src="images/ai-analytics-tool.jpg" alt="AI Analytics Tool" class="product-image">
+            <div class="product-info">
+                <h2>AI-Powered Analytics Tool</h2>
+                <p>The AI-Powered Analytics Tool helps companies gain data-driven insights to make better business decisions. This tool offers real-time analytics and powerful data visualization.</p>
+                <ul>
+                    <li>Real-time data analytics for faster decision-making</li>
+                    <li>Advanced data visualization tools</li>
+                    <li>AI-powered insights for predictive analytics</li>
+                </ul>
+                <a href="https://affiliate-link.com/product2" class="button primary">Buy Now</a>
+            </div>
+        </div>
     </main>
 
     <footer>
