--- a/checkout.html
+++ b/checkout.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Scholar GPT Checkout</title>
+    <script src="paypal-checkout.js"></script> <!-- Include your PayPal checkout script -->
+</head>
+<body>
+    <h1>Complete Your Purchase</h1>
+    <div id="paypal-button-container"></div>
+</body>
+</html>
