--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Business Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to Your Business</h1>
+        <p>Your journey to success starts here!</p>
+    </header>
 
+    <main>
+        <section>
+            <h2>Our Services</h2>
+            <p>We offer top-notch services that cater to your needs.</p>
+        </section>
+
+        <section>
+            <h2>Contact Us</h2>
+            <p>Get in touch with us today to learn more about how we can help you grow.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Your Business. All rights reserved.</p>
+    </footer>
+</body>
+</html>
