--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         const checkoutButton = document.getElementById('checkout-button');
         checkoutButton.addEventListener('click', function () {
             console.log('Checkout button clicked');
-            fetch('/create-checkout-session', {
+            fetch('/api/create-checkout-session', {  // Use the correct /api path for Vercel
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
