--- a/success.html
+++ b/success.html
@@ -3,23 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment Successful</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Payment Success</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            color: green;
+        }
+        p {
+            font-size: 18px;
+        }
+        a {
+            color: blue;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Success!</h1>
-    </header>
-
-    <main>
-        <section>
-            <h2>Thank you for your purchase!</h2>
-            <p>Your transaction was successful. We will contact you shortly with further details.</p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Your Business. All rights reserved.</p>
-    </footer>
+    <h1>Thank You! 🎉</h1>
+    <p>Your payment was successful.</p>
+    <p><a href="/">Return to Home</a></p>
 </body>
 </html>
