--- a/cancel.html
+++ b/cancel.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment Canceled</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            color: red;
+        }
+        p {
+            font-size: 18px;
+        }
+        a {
+            color: blue;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Payment Canceled</h1>
-    </header>
-
-    <main>
-        <section>
-            <h2>Your payment was not processed.</h2>
-            <p>If you encountered any issues, please try again or contact us for assistance.</p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Your Business. All rights reserved.</p>
-    </footer>
+    <h1>Payment Canceled</h1>
+    <p>It looks like you canceled your payment.</p>
+    <p><a href="/">Return to Home</a></p>
 </body>
 </html>
