--- a/index.html
+++ b/index.html
@@ -3,67 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout</title>
+    <title>NicheCraft Automation</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header with Navigation Bar -->
     <header>
-        <h1>Complete Your Purchase</h1>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/services.html">Services</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <main>
-        <section>
-            <h2>Secure Payment</h2>
-            <form id="payment-form">
-                <button id="checkout-button" type="button">Proceed to Checkout</button>
-            </form>
-        </section>
-    </main>
+    <!-- Hero Section -->
+    <section id="hero">
+        <h1>Welcome to NicheCraft Automation</h1>
+        <p>Your solution for high-end services tailored for multi-billion-dollar companies.</p>
+    </section>
 
+    <!-- Services Section -->
+    <section id="services">
+        <div class="service">
+            <h3>Talent Management & Leadership Development</h3>
+            <p>Price: $300,000</p>
+            <button>Learn More</button>
+        </div>
+        <div class="service">
+            <h3>AI and Machine Learning Solutions</h3>
+            <p>Price: $500,000</p>
+            <button>Learn More</button>
+        </div>
+        <div class="service">
+            <h3>Marketing & Brand Strategy</h3>
+            <p>Price: $500,000</p>
+            <button>Learn More</button>
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Your Business. All rights reserved.</p>
+        <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
     </footer>
 
-    <!-- Stripe.js library -->
-    <script src="https://js.stripe.com/v3/"></script>
-
-    <script>
-        // Replace with your actual Stripe Publishable Key
-        const stripe = Stripe('pk_test_51PwwklEovoaBMy97wL7sCG7p2oJ48jx1TUmjI6g6QA8c7Qanp6u7xZoNfbtuVR9q8Un7wnEula7d3XX5F4KbtZgC00z1rtcIRR'); // Use your own publishable key
-
-        const checkoutButton = document.getElementById('checkout-button');
-        checkoutButton.addEventListener('click', function () {
-            console.log('Checkout button clicked');
-
-            // Fetch the session ID from the backend
-            fetch('/api/create-checkout-session', {  // Make sure this matches the /api path for Vercel
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-            })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Failed to create session, response not OK');
-                }
-                return response.json();
-            })
-            .then(session => {
-                console.log('Session created:', session);
-
-                // Redirect to Stripe Checkout
-                return stripe.redirectToCheckout({ sessionId: session.id });
-            })
-            .then(result => {
-                if (result.error) {
-                    alert(result.error.message);
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert('An error occurred. Check the console for details.');
-            });
-        });
-    </script>
+    <!-- JavaScript -->
+    <script src="services.js"></script>
 </body>
 </html>
