--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NicheCraft Automation</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header with Navigation Bar -->
@@ -22,7 +23,8 @@
     <!-- Hero Section -->
     <section id="hero">
         <h1>Welcome to NicheCraft Automation</h1>
-        <p>Your solution for high-end services tailored for multi-billion-dollar companies.</p>
+        <p>Transforming your business with high-end automation services for multi-billion-dollar companies.</p>
+        <button class="cta-btn">Get Started</button>
     </section>
 
     <!-- Services Section -->
