--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NicheCraft Automation</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header with Navigation Bar -->
+
+    <!-- Header -->
     <header>
         <nav>
             <ul>
@@ -22,27 +23,35 @@
 
     <!-- Hero Section -->
     <section id="hero">
-        <h1>Welcome to NicheCraft Automation</h1>
-        <p>Transforming your business with high-end automation services for multi-billion-dollar companies.</p>
-        <button class="cta-btn">Get Started</button>
+        <div class="hero-content">
+            <h1>Welcome to NicheCraft Automation</h1>
+            <p>High-end automation solutions crafted for multi-billion-dollar companies.</p>
+            <a href="/services.html" class="cta-btn">Explore Our Services</a>
+        </div>
     </section>
 
     <!-- Services Section -->
     <section id="services">
-        <div class="service">
-            <h3>Talent Management & Leadership Development</h3>
-            <p>Price: $300,000</p>
-            <button>Learn More</button>
-        </div>
-        <div class="service">
-            <h3>AI and Machine Learning Solutions</h3>
-            <p>Price: $500,000</p>
-            <button>Learn More</button>
-        </div>
-        <div class="service">
-            <h3>Marketing & Brand Strategy</h3>
-            <p>Price: $500,000</p>
-            <button>Learn More</button>
+        <h2>Our Premium Services</h2>
+        <div class="service-list">
+            <div class="service">
+                <img src="assets/images/talent-management.png" alt="Talent Management & Leadership Development">
+                <h3>Talent Management & Leadership Development</h3>
+                <p>Empower your leadership team with transformative coaching and development programs.</p>
+                <button>Learn More</button>
+            </div>
+            <div class="service">
+                <img src="assets/images/ai-solutions.png" alt="AI and Machine Learning Solutions">
+                <h3>AI and Machine Learning Solutions</h3>
+                <p>Revolutionize your business with cutting-edge AI and machine learning models.</p>
+                <button>Learn More</button>
+            </div>
+            <div class="service">
+                <img src="assets/images/marketing-strategy.png" alt="Marketing & Brand Strategy">
+                <h3>Marketing & Brand Strategy</h3>
+                <p>Enhance your brand's impact with expert-driven marketing strategies.</p>
+                <button>Learn More</button>
+            </div>
         </div>
     </section>
 
@@ -51,7 +60,6 @@
         <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
     </footer>
 
-    <!-- JavaScript -->
-    <script src="services.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
