--- a/pages/about.html
+++ b/pages/about.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us - NicheCraft Automation</title>
+    <link rel="stylesheet" href="styles/main.css">
+</head>
+<body>
+    <!-- Include Header -->
+    <div id="header"></div>
 
+    <!-- About Section -->
+    <section id="about" class="content-section">
+        <h1>About NicheCraft Automation</h1>
+        <p>NicheCraft Automation specializes in delivering high-end automation solutions to multi-billion-dollar companies. Our expertise spans across AI, machine learning, and leadership development, offering clients transformative strategies to scale and succeed in today's competitive landscape.</p>
+        <p>With decades of combined experience and a commitment to excellence, we drive innovation and foster long-term business growth. Our team is dedicated to providing tailored solutions that meet the specific needs of each client, ensuring maximum impact and efficiency.</p>
+        <h2>Our Vision</h2>
+        <p>To be the leading provider of premium automation solutions for the world's top enterprises, empowering them to thrive in the digital age.</p>
+    </section>
+
+    <!-- Include Footer -->
+    <div id="footer"></div>
+
+    <script src="scripts/main.js"></script>
+</body>
+</html>
