--- a/pages/about.html
+++ b/pages/about.html
@@ -7,21 +7,33 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <!-- Include Header -->
-    <div id="header"></div>
+
+    <!-- Header -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/services.html">Services</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <!-- About Section -->
     <section id="about" class="content-section">
         <h1>About NicheCraft Automation</h1>
-        <p>NicheCraft Automation specializes in delivering high-end automation solutions to multi-billion-dollar companies. Our expertise spans across AI, machine learning, and leadership development, offering clients transformative strategies to scale and succeed in today's competitive landscape.</p>
-        <p>With decades of combined experience and a commitment to excellence, we drive innovation and foster long-term business growth. Our team is dedicated to providing tailored solutions that meet the specific needs of each client, ensuring maximum impact and efficiency.</p>
-        <h2>Our Vision</h2>
-        <p>To be the leading provider of premium automation solutions for the world's top enterprises, empowering them to thrive in the digital age.</p>
+        <p>NicheCraft Automation provides cutting-edge automation solutions for multi-billion-dollar enterprises. With a focus on innovation and excellence, we offer tailored services that drive operational efficiency, streamline processes, and foster long-term growth.</p>
+        <p>We bring together experts in artificial intelligence, machine learning, and leadership development to deliver solutions that fit the specific needs of each client. Our commitment to excellence is reflected in the success of our clients, and we continuously strive to push the boundaries of what's possible with automation.</p>
+
+        <h2>Our Mission</h2>
+        <p>To empower businesses with world-class automation tools and services, driving innovation and sustainable growth.</p>
     </section>
 
-    <!-- Include Footer -->
-    <div id="footer"></div>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
+    </footer>
 
-    <script src="scripts/main.js"></script>
 </body>
 </html>
