--- a/pages/services.html
+++ b/pages/services.html
@@ -3,39 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Services</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Our Services - NicheCraft Automation</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+
+    <!-- Header -->
     <header>
-        <h1>Our Services</h1>
-        <p>Explore the range of services we offer to help grow your business.</p>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/services.html">Services</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <main>
-        <section>
-            <h2>Service 1: Premium Consulting</h2>
-            <p>Our expert consulting services are designed to provide you with insights and strategies to take your business to the next level.</p>
-        </section>
+    <!-- Services Section -->
+    <section id="services" class="content-section">
+        <h1>Our Services</h1>
+        <p>We offer a range of premium services designed to help multi-billion-dollar companies optimize their processes and stay competitive in the ever-evolving digital landscape.</p>
 
-        <section>
-            <h2>Service 2: Digital Marketing</h2>
-            <p>Boost your brand’s visibility and reach with our tailored digital marketing solutions.</p>
-        </section>
+        <div class="service-list">
+            <div class="service">
+                <img src="assets/images/talent-management.png" alt="Talent Management & Leadership Development">
+                <h3>Talent Management & Leadership Development</h3>
+                <p>Transform your leadership team with expert-driven talent management and development programs.</p>
+                <button>Learn More</button>
+            </div>
+            <div class="service">
+                <img src="assets/images/ai-solutions.png" alt="AI and Machine Learning Solutions">
+                <h3>AI and Machine Learning Solutions</h3>
+                <p>Implement cutting-edge AI and machine learning models to revolutionize your business.</p>
+                <button>Learn More</button>
+            </div>
+            <div class="service">
+                <img src="assets/images/marketing-strategy.png" alt="Marketing & Brand Strategy">
+                <h3>Marketing & Brand Strategy</h3>
+                <p>Enhance your brand’s market position with data-driven marketing strategies.</p>
+                <button>Learn More</button>
+            </div>
+        </div>
+    </section>
 
-        <section>
-            <h2>Service 3: E-commerce Solutions</h2>
-            <p>We provide cutting-edge e-commerce platforms to sell your products and services globally.</p>
-        </section>
-
-        <section>
-            <h2>Pricing</h2>
-            <p>Contact us for detailed pricing on all our services!</p>
-        </section>
-    </main>
-
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Your Business. All rights reserved.</p>
+        <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
     </footer>
+
 </body>
 </html>
