--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,13 +7,23 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <!-- Include Header -->
-    <div id="header"></div>
+
+    <!-- Header -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/services.html">Services</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <!-- Contact Section -->
     <section id="contact" class="content-section">
         <h1>Contact Us</h1>
-        <p>If you have any inquiries about our services or would like to discuss a project, feel free to reach out. Our team is here to assist you.</p>
+        <p>If you have any questions or would like to discuss a project, feel free to reach out to us using the form below.</p>
 
         <form action="/send-message" method="POST">
             <div class="form-group">
@@ -32,9 +42,10 @@
         </form>
     </section>
 
-    <!-- Include Footer -->
-    <div id="footer"></div>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 NicheCraft Automation. All rights reserved.</p>
+    </footer>
 
-    <script src="scripts/main.js"></script>
 </body>
 </html>
