--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/services.html">Services</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/index.html">Home</a></li> <!-- Stays in root directory -->
+                <li><a href="/pages/about.html">About</a></li>
+                <li><a href="/pages/services.html">Services</a></li>
+                <li><a href="/pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -25,7 +25,7 @@
         <div class="hero-content">
             <h1>Welcome to NicheCraft Automation</h1>
             <p>High-end automation solutions crafted for multi-billion-dollar companies.</p>
-            <a href="/services.html" class="cta-btn">Explore Our Services</a>
+            <a href="/pages/services.html" class="cta-btn">Explore Our Services</a>
         </div>
     </section>
 
@@ -37,19 +37,19 @@
                 <img src="assets/images/talent-management.png" alt="Talent Management & Leadership Development">
                 <h3>Talent Management & Leadership Development</h3>
                 <p>Empower your leadership team with transformative coaching and development programs.</p>
-                <button>Learn More</button>
+                <a href="/pages/services.html" class="cta-btn">Learn More</a>
             </div>
             <div class="service">
                 <img src="assets/images/ai-solutions.png" alt="AI and Machine Learning Solutions">
                 <h3>AI and Machine Learning Solutions</h3>
                 <p>Revolutionize your business with cutting-edge AI and machine learning models.</p>
-                <button>Learn More</button>
+                <a href="/pages/services.html" class="cta-btn">Learn More</a>
             </div>
             <div class="service">
                 <img src="assets/images/marketing-strategy.png" alt="Marketing & Brand Strategy">
                 <h3>Marketing & Brand Strategy</h3>
                 <p>Enhance your brand's impact with expert-driven marketing strategies.</p>
-                <button>Learn More</button>
+                <a href="/pages/services.html" class="cta-btn">Learn More</a>
             </div>
         </div>
     </section>
