--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - NicheCraft Automation</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
 
@@ -12,10 +12,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/services.html">Services</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/pages/about.html">About</a></li>
+                <li><a href="/pages/services.html">Services</a></li>
+                <li><a href="/pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -23,11 +23,11 @@
     <!-- About Section -->
     <section id="about" class="content-section">
         <h1>About NicheCraft Automation</h1>
-        <p>NicheCraft Automation provides cutting-edge automation solutions for multi-billion-dollar enterprises. With a focus on innovation and excellence, we offer tailored services that drive operational efficiency, streamline processes, and foster long-term growth.</p>
-        <p>We bring together experts in artificial intelligence, machine learning, and leadership development to deliver solutions that fit the specific needs of each client. Our commitment to excellence is reflected in the success of our clients, and we continuously strive to push the boundaries of what's possible with automation.</p>
+        <p>NicheCraft Automation provides cutting-edge automation solutions for multi-billion-dollar enterprises. Our focus is on delivering custom-tailored services that streamline processes, increase efficiency, and help businesses grow sustainably.</p>
+        <p>We bring together experts in AI, machine learning, and leadership development to offer solutions that meet each client’s unique needs. Our commitment to excellence is reflected in the long-term success of our clients, and we continuously strive to push the boundaries of what's possible with automation.</p>
 
-        <h2>Our Mission</h2>
-        <p>To empower businesses with world-class automation tools and services, driving innovation and sustainable growth.</p>
+        <h2>Our Vision</h2>
+        <p>To empower businesses with top-tier automation solutions, driving innovation and sustainable growth.</p>
     </section>
 
     <!-- Footer -->
