--- a/pages/services.html
+++ b/pages/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Services - NicheCraft Automation</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
 
@@ -12,10 +12,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/services.html">Services</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/pages/about.html">About</a></li>
+                <li><a href="/pages/services.html">Services</a></li>
+                <li><a href="/pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -23,26 +23,26 @@
     <!-- Services Section -->
     <section id="services" class="content-section">
         <h1>Our Services</h1>
-        <p>We offer a range of premium services designed to help multi-billion-dollar companies optimize their processes and stay competitive in the ever-evolving digital landscape.</p>
+        <p>We offer a range of premium services to help multi-billion-dollar companies stay ahead in the digital era.</p>
 
         <div class="service-list">
             <div class="service">
-                <img src="assets/images/talent-management.png" alt="Talent Management & Leadership Development">
+                <img src="../assets/images/talent-management.png" alt="Talent Management & Leadership Development">
                 <h3>Talent Management & Leadership Development</h3>
-                <p>Transform your leadership team with expert-driven talent management and development programs.</p>
-                <button>Learn More</button>
+                <p>Transform your leadership team with advanced talent management and development programs.</p>
+                <a href="/pages/services.html" class="cta-btn">Learn More</a>
             </div>
             <div class="service">
-                <img src="assets/images/ai-solutions.png" alt="AI and Machine Learning Solutions">
+                <img src="../assets/images/ai-solutions.png" alt="AI and Machine Learning Solutions">
                 <h3>AI and Machine Learning Solutions</h3>
-                <p>Implement cutting-edge AI and machine learning models to revolutionize your business.</p>
-                <button>Learn More</button>
+                <p>Revolutionize your business with cutting-edge AI and machine learning technologies.</p>
+                <a href="/pages/services.html" class="cta-btn">Learn More</a>
             </div>
             <div class="service">
-                <img src="assets/images/marketing-strategy.png" alt="Marketing & Brand Strategy">
+                <img src="../assets/images/marketing-strategy.png" alt="Marketing & Brand Strategy">
                 <h3>Marketing & Brand Strategy</h3>
-                <p>Enhance your brand’s market position with data-driven marketing strategies.</p>
-                <button>Learn More</button>
+                <p>Elevate your brand's presence with our expert marketing and brand strategies.</p>
+                <a href="/pages/services.html" class="cta-btn">Learn More</a>
             </div>
         </div>
     </section>
