--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - NicheCraft Automation</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
 
@@ -12,10 +12,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/services.html">Services</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/pages/about.html">About</a></li>
+                <li><a href="/pages/services.html">Services</a></li>
+                <li><a href="/pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -23,7 +23,7 @@
     <!-- Contact Section -->
     <section id="contact" class="content-section">
         <h1>Contact Us</h1>
-        <p>If you have any questions or would like to discuss a project, feel free to reach out to us using the form below.</p>
+        <p>If you have any questions or would like to learn more about our services, feel free to reach out to us.</p>
 
         <form action="/send-message" method="POST">
             <div class="form-group">
