--- a/pages/about.html
+++ b/pages/about.html
@@ -22,12 +22,21 @@
 
     <!-- About Section -->
     <section id="about" class="content-section">
-        <h1>About NicheCraft Automation</h1>
-        <p>NicheCraft Automation provides cutting-edge automation solutions for multi-billion-dollar enterprises. Our focus is on delivering custom-tailored services that streamline processes, increase efficiency, and help businesses grow sustainably.</p>
-        <p>We bring together experts in AI, machine learning, and leadership development to offer solutions that meet each client’s unique needs. Our commitment to excellence is reflected in the long-term success of our clients, and we continuously strive to push the boundaries of what's possible with automation.</p>
+        <div class="about-container">
+            <h1>About NicheCraft Automation</h1>
+            <p>NicheCraft Automation is committed to delivering premium automation solutions for multi-billion-dollar companies. Our cutting-edge technology and innovation-driven approach help businesses optimize processes and scale to new heights of success.</p>
+            <p>Our team consists of world-class experts in artificial intelligence, machine learning, leadership development, and digital transformation. With a strong focus on excellence and tailored solutions, we empower companies to stay competitive in an ever-changing landscape.</p>
 
-        <h2>Our Vision</h2>
-        <p>To empower businesses with top-tier automation solutions, driving innovation and sustainable growth.</p>
+            <h2>Our Vision</h2>
+            <p>To become the global leader in automation services, setting the standard for innovation, operational efficiency, and sustainable growth.</p>
+
+            <h2>Our Values</h2>
+            <ul>
+                <li><strong>Innovation</strong>: We consistently push boundaries, delivering cutting-edge solutions that transform industries.</li>
+                <li><strong>Excellence</strong>: Quality and attention to detail are at the core of everything we do.</li>
+                <li><strong>Partnership</strong>: We work closely with our clients to build long-term relationships based on trust and collaboration.</li>
+            </ul>
+        </div>
     </section>
 
     <!-- Footer -->
