--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,24 +22,29 @@
 
     <!-- Contact Section -->
     <section id="contact" class="content-section">
-        <h1>Contact Us</h1>
-        <p>If you have any questions or would like to learn more about our services, feel free to reach out to us.</p>
+        <div class="contact-container">
+            <h1>Contact NicheCraft Automation</h1>
+            <p>If you have any inquiries about our services, or would like to discuss a project, feel free to reach out to us using the form below.</p>
 
-        <form action="/send-message" method="POST">
-            <div class="form-group">
-                <label for="name">Your Name</label>
-                <input type="text" id="name" name="name" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Your Email</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="message">Your Message</label>
-                <textarea id="message" name="message" rows="6" required></textarea>
-            </div>
-            <button type="submit" class="cta-btn">Send Message</button>
-        </form>
+            <form action="/send-message" method="POST" class="contact-form">
+                <div class="form-group">
+                    <label for="name">Your Name</label>
+                    <input type="text" id="name" name="name" required placeholder="Enter your full name">
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Your Email</label>
+                    <input type="email" id="email" name="email" required placeholder="Enter your email address">
+                </div>
+
+                <div class="form-group">
+                    <label for="message">Your Message</label>
+                    <textarea id="message" name="message" rows="6" required placeholder="Write your message here"></textarea>
+                </div>
+
+                <button type="submit" class="cta-btn">Send Message</button>
+            </form>
+        </div>
     </section>
 
     <!-- Footer -->
